--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- HERO SECTION -->
     <section class="hero">
       <img src="images/hero.jpg" alt="Illustration manga d'accueil">
-      <h2>Plonge dans mon univers manga</h2>
+      <h2>Samael Art</h2>
       <p class="slogan">"L’art est mon pouvoir, le dessin mon katana."</p>
     </section>
 
@@ -61,4 +61,5 @@
     <p>&copy; 2025 Simon - Tous droits réservés</p>
   </footer>
 </body>
+
 </html>
