--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="navbar">
-      <div class="logo">MangaArt</div>
+      <div class="logo">Samael Manga Art</div>
       <input type="checkbox" id="menu-toggle">
       <label for="menu-toggle" class="menu-icon">&#9776;</label>
       <ul class="menu">
@@ -63,3 +63,4 @@
 </body>
 
 </html>
+
