--- a/blog.html
+++ b/blog.html
@@ -19,25 +19,44 @@
 
   </header>
 
-  <main>
-    <h2>Blog</h2>
-    <div class="article">
-      <h3>Comment je crée mes personnages</h3>
-      <p>Publié le 9 août 2025</p>
-      <p>Dans cet article, je vous explique comment je développe mes personnages, de l’esquisse à la mise en couleur...</p>
-      <a href="#">Lire plus</a>
-    </div>
+<main>
+  <h2>Blog</h2>
 
-    <div class="article">
-      <h3>Mes inspirations manga</h3>
-      <p>Publié le 1 août 2025</p>
-      <p>De Naruto à Demon Slayer, voici les œuvres qui m’ont influencé dans mon style et mes choix artistiques...</p>
-      <a href="#">Lire plus</a>
+  <div class="article">
+    <h3>Comment je crée mes personnages</h3>
+    <p class="excerpt">Je vous explique comment je développe mes personnages, de l’esquisse à la mise en couleur...</p>
+    <button onclick="toggleArticle(this)">Lire plus</button>
+    <div class="full-text hidden">
+      <p>Je commence toujours par une idée vague : une émotion, une posture, un regard. Ensuite je fais plusieurs croquis rapides pour capturer l’énergie du personnage. Une fois que j’ai trouvé la bonne silhouette, je travaille les détails : vêtements, accessoires, expressions. Enfin, je passe à la mise en couleur avec des tons qui reflètent sa personnalité.</p>
     </div>
-  </main>
+  </div>
+
+  <div class="article">
+    <h3>Mes inspirations manga</h3>
+    <p class="excerpt">Voici les œuvres qui m’ont influencé dans mon style et mes choix artistiques...</p>
+    <button onclick="toggleArticle(this)">Lire plus</button>
+    <div class="full-text hidden">
+      <p>Je suis très inspiré par des classiques comme Naruto, Bleach et One Piece, mais aussi par des œuvres plus récentes comme Jujutsu Kaisen ou Chainsaw Man. Ce que j’aime, c’est la manière dont les auteurs utilisent les codes visuels pour transmettre des émotions fortes. Je m’en inspire pour créer mes propres univers.</p>
+    </div>
+  </div>
+</main>
 
   <footer>
     <p>&copy; 2025 Simon - Tous droits réservés</p>
   </footer>
 </body>
 </html>
+
+<script>
+  function toggleArticle(button) {
+    const fullText = button.nextElementSibling;
+    if (fullText.classList.contains('hidden')) {
+      fullText.classList.remove('hidden');
+      button.textContent = "Lire moins";
+    } else {
+      fullText.classList.add('hidden');
+      button.textContent = "Lire plus";
+    }
+  }
+</script>
+
