--- a/blog.html
+++ b/blog.html
@@ -85,6 +85,21 @@
   </style>
 </head>
 <body>
+  <header>
+  <div class="navbar">
+    <div class="logo">MangaArt</div>
+    <input type="checkbox" id="menu-toggle">
+    <label for="menu-toggle" class="menu-icon">&#9776;</label>
+   <ul class="menu">
+  <li><a href="index.html">Accueil</a></li>
+  <li><a href="galerie.html">Galerie</a></li>
+  <li><a href="boutique.html">Boutique</a></li>
+  <li><a href="contact.html">Contact</a></li>
+  <li><a href="blog.html">Blog</a></li>
+  <li><a href="forum.html">Forum</a></li>
+</ul>
+  </div>
+</header>
 
   <h2>Blog</h2>
 
@@ -131,3 +146,4 @@
 
 </body>
 </html>
+
