--- a/blog.html
+++ b/blog.html
@@ -100,7 +100,7 @@
 </ul>
   </div>
 </header>
-
+<main>
   <h2>Blog</h2>
 
   <div class="article">
@@ -126,7 +126,7 @@
       <p>Je suis très inspiré par des classiques comme Naruto, Bleach et One Piece, mais aussi par des œuvres plus récentes comme Jujutsu Kaisen ou Chainsaw Man. Ce que j’aime, c’est la manière dont les auteurs utilisent les codes visuels pour transmettre des émotions fortes. Je m’en inspire pour créer mes propres univers.</p>
     </div>
   </div>
-
+</main>
   <script>
     function toggleArticle(button) {
       const fullText = button.nextElementSibling;
@@ -146,4 +146,5 @@
 
 </body>
 </html>
+
 
