--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="apercu-galerie">
       <h3>Quelques créations</h3>
       <div class="galerie">
-        <img src="images/dessin1.jpg" alt="Dessin 1">
+        <img src="images/Pending.png" alt="Dessin 1">
         <img src="images/dessin2.jpg" alt="Dessin 2">
         <img src="images/dessin3.jpg" alt="Dessin 3">
       </div>
@@ -63,4 +63,5 @@
 </body>
 
 </html>
+
 
