--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <!-- HERO SECTION -->
     <section class="hero">
-      <img src="images/hero.jpg" alt="Illustration manga d'accueil">
+      <img src="images/avatar.png" alt="Illustration manga d'accueil">
       <h2>Samael Art</h2>
       <p class="slogan">"L’art est mon pouvoir, le dessin mon katana."</p>
     </section>
@@ -63,5 +63,6 @@
 </body>
 
 </html>
+
 
 
