--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- PRÉSENTATION -->
     <section class="presentation">
-      <img src="images/avatar.jpg" alt="Portrait de Simon" class="avatar">
+      <img src="images/avatar.png" alt="avatar" class="avatar">
       <h3>Qui suis-je ?</h3>
       <p>Je suis Simon, artiste passionné par l’univers manga. Je crée des personnages, des mondes et des émotions à travers mes dessins. Bienvenue dans mon monde !</p>
     </section>
@@ -63,6 +63,7 @@
 </body>
 
 </html>
+
 
 
 
