--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
   <main>
     <!-- HERO SECTION -->
-    <section class="hero">
-      <img src="images/avatar.png" alt="Avatar" class="avatar">
-      <h2>Samael Art</h2>
-      <p class="slogan">"L’art est mon pouvoir, le dessin mon katana."</p>
-    </section>
+   <section class="hero-banner">
+  <img src="images/banner.png" alt="Bannière Samael Art" class="banner-image">
+  <h2 class="banner-title">Samael Art</h2>
+  <p class="slogan">"L’art est mon pouvoir, le dessin mon katana."</p>
+</section>
 
     <!-- PRÉSENTATION -->
     <section class="presentation">
@@ -63,6 +63,7 @@
 </body>
 
 </html>
+
 
 
 
