--- a/blog.html
+++ b/blog.html
@@ -97,28 +97,17 @@
   <h2>Blog</h2>
 
   <div class="article">
-    <h3>Comment je crée mes personnages</h3>
-    <p class="excerpt">Je vous explique comment je développe mes personnages, de l’esquisse à la mise en couleur...</p>
+    <h3>Ouverture du site en version beta - 10/08/2025</h3>
+    <p class="excerpt">Petit détail sur le but du site et l'ouverture en version beta...</p>
     <button class="toggle-btn" onclick="toggleArticle(this)">
       <span class="label">Lire plus</span>
       <span class="arrow">▼</span>
     </button>
     <div class="full-text">
-      <p>Je commence toujours par une idée vague : une émotion, une posture, un regard. Ensuite je fais plusieurs croquis rapides pour capturer l’énergie du personnage. Une fois que j’ai trouvé la bonne silhouette, je travaille les détails : vêtements, accessoires, expressions. Enfin, je passe à la mise en couleur avec des tons qui reflètent sa personnalité.</p>
+      <p>En construction.</p>
     </div>
   </div>
-
-  <div class="article">
-    <h3>Mes inspirations manga</h3>
-    <p class="excerpt">Voici les œuvres qui m’ont influencé dans mon style et mes choix artistiques...</p>
-    <button class="toggle-btn" onclick="toggleArticle(this)">
-      <span class="label">Lire plus</span>
-      <span class="arrow">▼</span>
-    </button>
-    <div class="full-text">
-      <p>Je suis très inspiré par des classiques comme Naruto, Bleach et One Piece, mais aussi par des œuvres plus récentes comme Jujutsu Kaisen ou Chainsaw Man. Ce que j’aime, c’est la manière dont les auteurs utilisent les codes visuels pour transmettre des émotions fortes. Je m’en inspire pour créer mes propres univers.</p>
-    </div>
-  </div>
+  
 </main>
   <script>
     function toggleArticle(button) {
@@ -139,6 +128,7 @@
 
 </body>
 </html>
+
 
 
 
