--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="presentation">
    <img src="images/avatar.png" alt="Avatar" class="avatar">
       <h3>Qui suis-je ?</h3>
-      <p>Je suis Simon, artiste passionné par l’univers manga. Je crée des personnages, des mondes et des émotions à travers mes dessins. Bienvenue dans mon monde !</p>
+      <p>Je suis Simon, dessinateur depuis de très longues années, je suis disponible pour toutes commandes ou créations spécifique, vous pouvez pour cela utiliser mon formulaire de contact !</p>
     </section>
 
     <!-- APERÇU GALERIE -->
@@ -63,6 +63,7 @@
 </body>
 
 </html>
+
 
 
 
