--- a/galerie.html
+++ b/galerie.html
@@ -26,7 +26,7 @@
   <main>
     <h2>Galerie de dessins</h2>
     <div class="galerie">
-      <img src="images/dessin1.jpg" alt="Dessin manga 1">
+      <img src="images/Pending.png" alt="Dessin manga 1">
       <img src="images/dessin2.jpg" alt="Dessin manga 2">
       <img src="images/dessin3.jpg" alt="Dessin manga 3">
     </div>
@@ -36,4 +36,5 @@
     <p>&copy; 2025 Simon - Tous droits réservés</p>
   </footer>
 </body>
+
 </html>
