--- a/boutique.html
+++ b/boutique.html
@@ -28,8 +28,8 @@
     <p>Voici quelques œuvres disponibles à la vente :</p>
     <div class="produits">
       <div class="produit">
-        <img src="images/produit1.jpg" alt="Poster manga">
-        <p>Poster A3 - 15€</p>
+        <img src="images/Pending.png" alt="Print manga">
+        <p>Print - A4</p>
       </div>
       <div class="produit">
         <img src="images/produit2.jpg" alt="Carte postale manga">
@@ -42,4 +42,5 @@
     <p>&copy; 2025 Simon - Tous droits réservés</p>
   </footer>
 </body>
+
 </html>
