--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
       <p>Je suis Simon, dessinateur depuis de très longues années, je suis disponible pour toutes commandes ou créations spécifique, vous pouvez pour cela utiliser mon formulaire de contact !</p>
     </section>
 
+    <article> 
+    <h3>Mes compétences :</h3>
+    
+    </article>
+    
     <!-- APERÇU GALERIE -->
     <section class="apercu-galerie">
       <h3>Quelques créations</h3>
@@ -61,6 +66,7 @@
 </body>
 
 </html>
+
 
 
 
