--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <p>Je suis Simon, dessinateur depuis de très longues années, je suis disponible pour toutes commandes ou créations spécifique, vous pouvez pour cela utiliser mon formulaire de contact !</p>
     </section>
 
-    <article> 
+     <!-- COMPETENCES -->
+    <article class="competences"> 
     <h3>Mes compétences :</h3>
     
     </article>
@@ -66,6 +67,7 @@
 </body>
 
 </html>
+
 
 
 
