--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
      <!-- COMPETENCES -->
-    <article class="competences"> 
+    <article id="competences"> 
     <h3>Mes compétences :</h3>
     
     </article>
@@ -67,6 +67,7 @@
 </body>
 
 </html>
+
 
 
 
