--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
     </section>
 
      <!-- COMPETENCES -->
-    <article id="competences"> 
+    <article class="competences"> 
     <h3>Mes compétences :</h3>
-    
     </article>
     
     <!-- APERÇU GALERIE -->
@@ -67,6 +66,7 @@
 </body>
 
 </html>
+
 
 
 
