--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
      <!-- COMPETENCES -->
     <article class="competences"> 
     <h3>Mes compétences :</h3>
+      <p> Blablablablabla....</p>
     </article>
     
     <!-- APERÇU GALERIE -->
@@ -66,6 +67,7 @@
 </body>
 
 </html>
+
 
 
 
