--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <li><a href="contact.html">Contact</a></li>
   <li><a href="blog.html">Blog</a></li>
   <li><a href="forum.html">Forum</a></li>
+  <li><a href="apropos.html">Blog</a></li>
 </ul>
     </div>
   </header>
@@ -67,6 +68,7 @@
 </body>
 
 </html>
+
 
 
 
