--- a/apropos.html
+++ b/apropos.html
@@ -18,7 +18,7 @@
   <li><a href="boutique.html">Boutique</a></li>
   <li><a href="contact.html">Contact</a></li>
   <li><a href="blog.html">Blog</a></li>
-  <li><a href="apropos.html">Blog</a></li>
+  <li><a href="apropos.html">A propos de moi</a></li>
   <li><a href="forum.html">Forum</a></li>
 </ul>
   </div>
@@ -34,3 +34,4 @@
 </body>
 
 </html>
+
