--- a/forum.html
+++ b/forum.html
@@ -26,9 +26,10 @@
   <li><a href="index.html">Accueil</a></li>
   <li><a href="galerie.html">Galerie</a></li>
   <li><a href="boutique.html">Boutique</a></li>
-  <li><a href="contact.html">Contact</a></li>
   <li><a href="blog.html">Blog</a></li>
   <li><a href="forum.html">Forum</a></li>
+  <li><a href="apropos.html">A propos de moi</a></li>
+  <li><a href="contact.html">Contact</a></li>
 </ul>
   </div>
   </header>
@@ -176,4 +177,5 @@ function displayTopics() {
 
 </body>
 </html>
+
 
