--- a/apropos.html
+++ b/apropos.html
@@ -25,7 +25,7 @@
 </header>
 
   <main>
-    <h1>A propos de moi !</h1>
+    <h1 class="banner-title">A propos de moi !</h1>
     <section>
         <h2>Introduction personnelle</h2>
         <p>Bonjour et bienvenue sur <strong>MangaArt</strong> !<br>
@@ -65,6 +65,7 @@
 </body>
 
 </html>
+
 
 
 
