--- a/apropos.html
+++ b/apropos.html
@@ -9,7 +9,7 @@
 <body>
 <header>
   <div class="navbar">
-    <div class="logo">MangaArt</div>
+    <div class="logo">Samael Art</div>
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
     <ul class="menu">
@@ -28,34 +28,33 @@
     <h2>A propos de moi !</h2>
     <section>
         <h2>Introduction personnelle</h2>
-        <p>Bonjour et bienvenue sur <strong>MangaArt</strong> !<br>
-        Je m'appelle Simon, artiste passionné par l’univers du manga, du dessin digital et de la narration visuelle. Depuis 2015, je partage ici mes créations, mes inspirations et mes projets.</p>
+        <p>Bonjour et bienvenue sur <strong>Samael Art</strong> !<br>
+        Je m'appelle Simon, un dessinateur amateur, passionné du Japon et de manga, et j'ai depuis peu décidé de partager ici mes créations et m'ouvrir aux commandes et projets. </p>
     </section>
 
     <section>
         <h2>Parcours artistique</h2>
-        <p>Depuis mon plus jeune âge, je suis fasciné par les mangas japonais, les jeux vidéo et l’animation. Ce site est né de cette passion, avec l’envie de créer un espace où je peux exposer mes œuvres et échanger avec d’autres passionnés.</p>
+        <p>Depuis mon plus jeune âge, je suis fasciné par les mangas japonais, les jeux vidéo et l’animation. Ce site est né de cette passion, avec l’envie de créer un espace où je peux exposer mes œuvres et échanger avec d’autres passionnés et pourquoi pas vendre mes oeuvres si celles-ci vous plaisent.</p>
     </section>
 
     <section>
         <h2>Style et influences</h2>
-        <p>Mon style est un mélange de shōnen dynamique, de fantasy sombre et de science-fiction. J’aime explorer des univers riches, peuplés de personnages complexes et d’émotions fortes. Mes influences vont de <em>Berserk</em> à <em>Akira</em>, en passant par <em>Final Fantasy</em> et <em>Ghost in the Shell</em>.</p>
+        <p>Mon style est un mélange de shōnen, de fantasy et de science-fiction. J’aime explorer des univers riches, peuplés de personnages complexes et d’émotions fortes. Mes influences vont de <em>Saint Seiya</em> à <em>Naruto</em>, en passant par <em>Elden Ring</em> et <em>World of Warcraft</em>.</p>
     </section>
 
     <section>
         <h2>Ce que tu trouveras ici</h2>
         <ul>
             <li>Une <strong>galerie</strong> de mes illustrations originales</li>
-            <li>Une <strong>boutique</strong> avec des impressions, goodies et commissions</li>
-            <li>Un <strong>blog</strong> où je partage mes coulisses, tutoriels et réflexions</li>
-            <li>Un <strong>forum</strong> pour échanger avec la communauté</li>
+            <li>Une <strong>boutique</strong> avec des impressions</li>
+            <li>Un <strong>blog</strong> où je partage mes coulisses, tutoriels et réflexions ainsi qu'une newsletter</li>
         </ul>
     </section>
 
     <section class="contact">
         <h2>Contact & réseaux</h2>
         <p>Tu veux collaborer, me poser une question ou simplement discuter ?<br>
-        Retrouve-moi sur <a href="#">Instagram</a>, <a href="#">Twitter</a>, ou écris-moi via la page <a href="#">Contact</a>.</p>
+        <p>écris-moi via la page <a href="#">Contact</a>.</p>
     </section>
   </main>
 
@@ -65,6 +64,7 @@
 </body>
 
 </html>
+
 
 
 
