--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,9 @@
   <label for="nom">Nom :</label><br>
   <input type="text" id="nom" name="nom" required><br><br>
 
+  <label for="oeuvre">Œuvre concernée :</label>
+  <input type="text" id="oeuvre" name="oeuvre" placeholder="Titre ou référence de l'œuvre" required>
+
   <label for="email">Email :</label><br>
   <input type="email" id="email" name="email" required><br><br>
 
@@ -64,6 +67,7 @@
   });
   elements.forEach(el => observer.observe(el));
 </script>
+
 
 
 
