--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
   <input type="text" id="nom" name="nom" required><br><br>
 
   <label for="oeuvre">Oeuvre concernée :</label>
-  <input type="text" id="oeuvre" name="oeuvre" placeholder="Titre ou référence de l'œuvre (JV, manga, webtoon, animé, etc.." required>
+  <input type="text" id="oeuvre" name="oeuvre" placeholder="Titre ou référence de l'œuvre (JV, manga, webtoon, animé, etc..)" required>
 
   <label for="email">Email :</label><br>
   <input type="email" id="email" name="email" required><br><br>
@@ -67,6 +67,7 @@
   });
   elements.forEach(el => observer.observe(el));
 </script>
+
 
 
 
