--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="navbar">
-      <div class="logo">Samael Manga Art</div>
+      <div class="logo">Samael Art</div>
       <ul class="menu">
   <li><a href="index.html">Accueil</a></li>
   <li><a href="galerie.html">Galerie</a></li>
@@ -65,6 +65,7 @@
 </body>
 
 </html>
+
 
 
 
