--- a/galerie.html
+++ b/galerie.html
@@ -9,7 +9,7 @@
 <body>
 <header>
   <div class="navbar">
-    <div class="logo">MangaArt</div>
+    <div class="logo">Samael Art</div>
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
     <ul class="menu">
