--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
 <body>
   <header>
   <div class="navbar">
-    <div class="logo">MangaArt</div>
+    <div class="logo">Samael Art</div>
     <input type="checkbox" id="menu-toggle">
     <label for="menu-toggle" class="menu-icon">&#9776;</label>
    <ul class="menu">
@@ -128,6 +128,7 @@
 
 </body>
 </html>
+
 
 
 
