--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         <img src="images/Pending.png" alt="Dessin 1">
       </div>
       <a href="galerie.html" class="btn">Voir toute la galerie</a>
+      <a href="images/Pending.png" target="_blank">
+  <img src="images/Pending.png" alt="Pending" style="max-width: 300px;">
+</a>
+
+      
     </section>
 
     <!-- BOUTIQUE -->
@@ -65,6 +70,7 @@
 </body>
 
 </html>
+
 
 
 
