--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
     <section class="apercu-galerie">
       <h3>Quelques créations</h3>
       <div class="galerie">
-        <img src="images/Pending.png" alt="Dessin 1">
+        <img src="images/Pending.png" alt="Dessin 1" target="_blank" >
       </div>
       <a href="galerie.html" class="btn">Voir toute la galerie</a>
       <a href="images/Pending.png" target="_blank">
-  <img src="images/Pending.png" alt="Pending" style="max-width: 300px;">
 </a>
 
       
@@ -70,6 +69,7 @@
 </body>
 
 </html>
+
 
 
 
