--- a/blog.html
+++ b/blog.html
@@ -107,6 +107,18 @@
       <p>En construction.</p>
     </div>
   </div>
+
+  <div class="article">
+    <h3>Sylvanas Coursevent est en cours ! - 10/09/2025</h3>
+    <p class="excerpt">Le prochain dessin orignal en vente est Sylvanas ! </p>
+    <button class="toggle-btn" onclick="toggleArticle(this)">
+      <span class="label">Lire plus</span>
+      <span class="arrow">▼</span>
+    </button>
+    <div class="full-text">
+      <p>Un petit article pour vous informer du prochain dessin original en vente, ce sera Sylvanas Coursevent de l'univers de World Of Warcraft ! </p>
+    </div>
+  </div>
   
 </main>
   <script>
@@ -128,6 +140,7 @@
 
 </body>
 </html>
+
 
 
 
