--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <img src="images/Pending.png" alt="Dessin 1" target="_blank" >
       </div>
         <div class="galerie">
-        <img src="images/IMG_1563.png" alt="Dessin 2" target="_blank" >
+        <img src="images/IMG_1563.jpg" alt="Dessin 2" target="_blank" >
       </div>
       <a href="galerie.html" class="btn">Voir toute la galerie</a>
       <a href="images/Pending.png" target="_blank">
@@ -72,6 +72,7 @@
 </body>
 
 </html>
+
 
 
 
