--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <section class="apercu-galerie">
       <h3>Quelques créations</h3>
    <div class="galerie">
-  <img src="chemin/vers/dessin1.jpg" alt="Dessin 1">
-  <img src="chemin/vers/dessin2.jpg" alt="Dessin 2">
+  <img src="images/Pending.png" alt="Dessin 1">
+  <img src="images/IMG_1563.jpg" alt="Dessin 2">
 </div>
       <a href="galerie.html" class="btn">Voir toute la galerie</a>
       <a href="images/Pending.png" target="_blank">
@@ -70,6 +70,7 @@
 </body>
 
 </html>
+
 
 
 
