--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
    <div class="galerie">
   <img src="images/Pending.png" alt="Dessin 1">
   <img src="images/IMG_1563.jpg" alt="Dessin 2">
+  <img src="images/Illustration.jpg" alt="Dessin 3">
 </div>
       <a href="galerie.html" class="btn">Voir toute la galerie</a>
       <a href="images/Pending.png" target="_blank">
@@ -70,6 +71,7 @@
 </body>
 
 </html>
+
 
 
 
