--- a/blog.html
+++ b/blog.html
@@ -119,6 +119,18 @@
       <p>Un petit article pour vous informer du prochain dessin original en vente, ce sera Sylvanas Coursevent de l'univers de World Of Warcraft ! </p>
     </div>
   </div>
+
+   <div class="article">
+    <h3>Ouverture du site en version beta - 16/01/2026</h3>
+    <p class="excerpt">Première création entièrement sur tablette graphique, Naruto Six Path ! </p>
+    <button class="toggle-btn" onclick="toggleArticle(this)">
+      <span class="label">Lire plus</span>
+      <span class="arrow">▼</span>
+    </button>
+    <div class="full-text">
+      <p>Et voici le premier dessin entièrement réalisé à la tablette graphique (donc sans souris, comme Sung) soyez clément !</p>
+    </div>
+  </div>
   
 </main>
   <script>
@@ -140,6 +152,7 @@
 
 </body>
 </html>
+
 
 
 
