Add second illustration to galerie.html
Added a new image to the gallery section.

--- a/galerie.html
+++ b/galerie.html
@@ -27,6 +27,7 @@
     <h2>Galerie de dessins</h2>
     <div class="galerie">
       <img src="images/Pending.png" alt="Dessin manga 1">
+       <img src="images/Ilustration.png" alt="Dessin manga 2">
     </div>
   </main>
 
@@ -36,6 +37,7 @@
 </body>
 
 </html>
+
 
 
 
