Add new image to galerie.html
Added a new image to the gallery section.

--- a/galerie.html
+++ b/galerie.html
@@ -27,7 +27,8 @@
     <h2>Galerie de dessins</h2>
     <div class="galerie">
       <img src="images/Pending.png" alt="Dessin manga 1">
-       <img src="images/Illustration.jpg" alt="Dessin manga 2">
+      <img src="images/Illustration.jpg" alt="Dessin manga 2">
+      <img src="images/Illustration2.jpg" alt="Dessin manga 3">
     </div>
   </main>
 
@@ -37,6 +38,7 @@
 </body>
 
 </html>
+
 
 
 
