--- a/blog.html
+++ b/blog.html
@@ -96,15 +96,27 @@
 <main>
   <h2>Blog</h2>
 
-  <div class="article">
-    <h3>Ouverture du site en version beta - 10/08/2025</h3>
-    <p class="excerpt">Petit détail sur le but du site et l'ouverture en version beta...</p>
+<div class="article">
+    <h3>One Piece - Luffy Gear 5 Sun God Nika - 16/01/2026</h3>
+    <p class="excerpt">Seconde création, j'espère progresser rapidement ! </p>
     <button class="toggle-btn" onclick="toggleArticle(this)">
       <span class="label">Lire plus</span>
       <span class="arrow">▼</span>
     </button>
     <div class="full-text">
-      <p>En construction.</p>
+      <p>Et voici le second, je pense qu'on va rester sur cette thèmatique de buste/face pendant quelques temps histoire de se familiariser avec le digital !</p>
+    </div>
+  </div>
+  
+<div class="article">
+    <h3>Naruto - Naruto Uzumaki Six Path - 16/01/2026</h3>
+    <p class="excerpt">Première création entièrement sur tablette graphique, Naruto Six Path ! </p>
+    <button class="toggle-btn" onclick="toggleArticle(this)">
+      <span class="label">Lire plus</span>
+      <span class="arrow">▼</span>
+    </button>
+    <div class="full-text">
+      <p>Et voici le premier dessin entièrement réalisé à la tablette graphique (donc sans souris, comme Sung) soyez clément !</p>
     </div>
   </div>
 
@@ -119,16 +131,16 @@
       <p>Un petit article pour vous informer du prochain dessin original en vente, ce sera Sylvanas Coursevent de l'univers de World Of Warcraft ! </p>
     </div>
   </div>
-
-   <div class="article">
-    <h3>Ouverture du site en version beta - 16/01/2026</h3>
-    <p class="excerpt">Première création entièrement sur tablette graphique, Naruto Six Path ! </p>
+  
+  <div class="article">
+    <h3>Ouverture du site en version beta - 10/08/2025</h3>
+    <p class="excerpt">Petit détail sur le but du site et l'ouverture en version beta...</p>
     <button class="toggle-btn" onclick="toggleArticle(this)">
       <span class="label">Lire plus</span>
       <span class="arrow">▼</span>
     </button>
     <div class="full-text">
-      <p>Et voici le premier dessin entièrement réalisé à la tablette graphique (donc sans souris, comme Sung) soyez clément !</p>
+      <p>En construction.</p>
     </div>
   </div>
   
@@ -152,6 +164,7 @@
 
 </body>
 </html>
+
 
 
 
