--- a/boutique.html
+++ b/boutique.html
@@ -30,6 +30,14 @@
         <img src="images/Pending.png" alt="Print manga">
         <p>Print - A4</p>
       </div>
+     <div class="produit">
+        <img src="images/Illustration.jpg" alt="Print manga">
+        <p>Print - A4</p>
+      </div>
+     <div class="produit">
+        <img src="images/Illustration2.jpg" alt="Print manga">
+        <p>Print - A4</p>
+      </div>
   </main>
 
   <footer>
@@ -38,6 +46,7 @@
 </body>
 
 </html>
+
 
 
 
