--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
      <!-- COMPETENCES -->
     <article class="competences"> 
     <h3>Mes compétences :</h3>
-      <p> Blablablablabla....</p>
+      <p> Pour que vous compreniez mes compétences, il est nécessaire de connaitre mon parcours.
+      J'ai commencé le dessin aux environs du collège, j'ai actuellement 29 ans ce qui vous laisse deviner depuis combien de temps je pratique.
+      Concernant mes compétences, elles sont variées :
+      - Dessin classique et digital plutôt orienté comics / manga,
+      - Créations originales (tatouages, dessin sur demande, etc.),
+      - Création d'un manga, ce projet est en cours et j'y travaille activement.</p>
     </article>
     
     <!-- APERÇU GALERIE -->
@@ -71,6 +76,7 @@
 </body>
 
 </html>
+
 
 
 
